@@ -48,6 +48,7 @@
   </module>
 
   <module id="alacarte">
+    <maintainer id="twatkins"/>
     <branch id="HEAD" stringfrozen="true"/>
     <branch id="gnome-2-16" stringfrozen="true"/>
   </module>
@@ -68,6 +69,7 @@
         </document>
       </branch>
     </defaults>
+    <maintainer id="naba"/>
     <branch id="HEAD" stringfrozen="false"/>
     <branch id="gnome-2-24" stringfrozen="true"/>
     <branch id="anjuta-2-2" stringfrozen="true"/>
@@ -158,6 +160,7 @@
   </module>
 
   <module id="bug-buddy">
+    <maintainer id="fherrera"/>
     <branch id="HEAD" stringfrozen="false"/>
     <branch id="gnome-2-14" stringfrozen="true">
       <document id="help">
@@ -197,6 +200,7 @@
   </module>
 
   <module id="cheese">
+    <maintainer id="dgsiegel"/>
     <branch id="HEAD" stringfrozen="false"/>
     <branch id="gnome-2-22" stringfrozen="true"/>
     <branch id="gnome-2-24" stringfrozen="true"/>
@@ -292,6 +296,7 @@
   </module>
 
   <module id="devhelp">
+    <maintainer id="rhult"/>
     <branch id="HEAD" stringfrozen="false"/>
     <branch id="gnome-2-18" stringfrozen="true"/>
     <branch id="gnome-2-20" stringfrozen="true"/>
@@ -324,6 +329,7 @@
   </module>
 
   <module id="eel">
+    <maintainer id="alexl"/>
     <branch id="HEAD" stringfrozen="false"/>
     <branch id="gnome-2-14" stringfrozen="true"/>
     <branch id="gnome-2-16" stringfrozen="true"/>
@@ -418,6 +424,7 @@
   </module>
 
   <module id="evolution">
+    <maintainer id="sragavan"/>
     <branch id="HEAD" stringfrozen="false"/>
     <branch id="gnome-2-14" stringfrozen="true"/>
     <branch id="gnome-2-16" stringfrozen="true"/>
@@ -428,6 +435,7 @@
   </module>
 
   <module id="evolution-data-server">
+    <maintainer id="sragavan"/>
     <branch id="HEAD" stringfrozen="false"/>
     <branch id="gnome-2-14" stringfrozen="true"/>
     <branch id="gnome-2-16" stringfrozen="true"/>
@@ -525,6 +533,7 @@
   </module>
 
   <module id="gbrainy">
+    <maintainer id="jmas"/>
     <branch id="HEAD"/>
   </module>
 
@@ -543,6 +552,7 @@
   </module>
 
   <module id="gconf">
+    <maintainer id="hp"/>
     <branch id="HEAD" stringfrozen="true"/>
     <branch id="gnome-2-14" stringfrozen="true"/>
     <branch id="gnome-2-18" stringfrozen="true"/>
