@@ -21,8 +21,14 @@
     <icon>http://planet.gnome.org/heads/abock.png</icon>
     <bugzilla-account>abockover@novell.com</bugzilla-account>
   </person>
+  <person id="alexl">
+    <name>Alex Larsson</name>
+    <email>alexl@redhat.com</email>
+    <webpage>http://blogs.gnome.org/alexl</webpage>
+    <icon>http://planet.gnome.org/heads/alex.png</icon>
+  </person>
   <person id="chpe">
-    <name>Christian Persch</name>
+     <name>Christian Persch</name>
     <email>chpe@gnome.org</email>
     <nick>chpe</nick>
     <webpage>http://gnome.org/~chpe/</webpage>
@@ -40,6 +46,13 @@
     <nick>davyd</nick>
     <webpage>http://www.davyd.id.au/</webpage>
     <icon>http://planet.gnome.org/heads/riff.png</icon>
+  </person>
+  <person id="dgsiegel">
+    <name>Daniel G. Siegel</name>
+    <email>dgsiegel@gmail.com</email>
+    <nick>dgsiegel</nick>
+    <webpage>http://home.cs.tum.edu/~siegel</webpage>
+    <icon>http://home.cs.tum.edu/~siegel/i/hackergotchi.png/</icon>
   </person>
   <person id="dsandras">
     <name>Damien Sandras</name>
@@ -61,6 +74,11 @@
     <webpage>http://monotonous.org</webpage>
     <icon>http://planet.gnome.org/heads/eeejay.png</icon>
   </person>
+  <person id="fherrera">
+    <name>Fernando Herrera</name>
+    <email>fherrera@onirica.com</email>
+    <nick>fherrera</nick>
+  </person>
   <person id="herzi">
     <name>Sven Herzberg</name>
     <email>herzberg.sven@gmail.com</email>
@@ -69,18 +87,17 @@
     <icon>http://planet.gnome.org/heads/herzi.png</icon>
     <bugzilla-account>herzi@gnome-de.org</bugzilla-account>
   </person>
+  <person id="hp">
+    <name>Havoc Pennington</name>
+    <email>hp@redhat.com</email>
+    <icon>http://planet.gnome.org/heads/hp.png</icon>
+    <webpage>http://log.ometer.com/</webpage>
+  </person>
   <person id="hughsie">
     <name>Richard Hugues</name>
     <email>richard@hughsie.com</email>
     <webpage>http://www.hughsie.com/</webpage>
     <icon>http://planet.gnome.org/heads/hughsie.png</icon>
-  </person>
-  <person id="murrayc">
-    <name>Murray Cumming</name>
-    <email>murrayc@murrayc.com</email>
-    <nick>murrayc</nick>
-    <webpage>http://www.murrayc.com/</webpage>
-    <icon>http://planet.gnome.org/heads/murrayc.png</icon>
   </person>
   <person id="joeshaw">
     <name>Joe Shaw</name>
@@ -90,6 +107,12 @@
     <webpage>http://joeshaw.org/</webpage>
     <icon>http://planet.gnome.org/heads/joe.png</icon>
     <bugzilla-account>joeshaw@novell.com</bugzilla-account>
+  </person>
+  <person id="jmas">
+    <name>Jordi Mas i Hernandez</name>
+    <email>jmas@softcatala.org</email>
+    <webpage>http://www.softcatala.org/~jmas/bloc/</webpage>
+    <icon>http://planet.gnome.org/heads/jmas.png</icon>
   </person>
   <person id="jrl">
     <name>James Livingston</name>
@@ -131,6 +154,18 @@
     <webpage>http://0pointer.de/lennart/</webpage>
     <icon>http://planet.gnome.org/heads/mezcalero.png</icon>
   </person>
+  <person id="murrayc">
+    <name>Murray Cumming</name>
+    <email>murrayc@murrayc.com</email>
+    <nick>murrayc</nick>
+    <webpage>http://www.murrayc.com/</webpage>
+    <icon>http://planet.gnome.org/heads/murrayc.png</icon>
+  </person>
+  <person id="naba">
+    <name>Naba Kumar</name>
+    <email>naba@gnome.org</name>
+    <nick>naba</nick>
+  </person>
   <person id="ogmaciel">
     <name>Og Maciel</name>
     <email>ogmaciel@gnome.org</email>
@@ -158,6 +193,12 @@
     <nick>kikidonk</nick>
     <webpage>http://raphael.slinckx.net/</webpage>
   </person>
+  <person id="rhult">
+    <name>Richard Hult</name>
+    <email>richard@imendio.com</email>
+    <webpage>http://people.imendio.com/richard/</webpage>
+    <nick>rhult</nick>
+  </person>
   <person id="shaunm">
     <name>Shaun McCance</name>
     <email>shaunm@gnome.org</email>
@@ -165,12 +206,23 @@
     <nick>shaunm</nick>
     <webpage>http://www.gnome.org/~shaunm/</webpage>
   </person>
+  <person id="sragavan">
+    <name>Srinivasa Ragavan</name>
+    <email>sragavan@novell.com</email>
+    <webpage>http://blogs.gnome.org/sragavan</webpage>
+    <icon>http://planet.gnome.org/heads/sri.png</icon>
+  </person>
   <person id="svu">
     <name>Sergey V. Udaltsov</name>
     <email>svu@gnome.org</email>
     <nick>svu</nick>
     <webpage>http://www.advogato.org/person/svu/</webpage>
     <icon>http://planet.gnome.org/heads/svu.png</icon>
+  </person>
+  <person id="twatkins">
+    <name>Travis Watkins</name>
+    <email>amaranth@ubuntu.com</name>
+    <nick>twatkins</nick>
   </person>
   <person id="veillard">
     <name>Daniel Veillard </name>
