@@ -1,6 +1,12 @@
 2008-10-19  Gil Forcada  <gforcada@gnome.org>
 
 	* gnome-modules.xml.in:
+	* people.xml.in:
+	Added ~10 maintainers :)
+
+2008-10-19  Gil Forcada  <gforcada@gnome.org>
+
+	* gnome-modules.xml.in:
 	* releases.xml.in:
 	at-spi, atk and gnome-icon-theme has been branched for GNOME 2.24.
 
